--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "type": "module",
   "dependencies": {
-    "@langchain/community": "^0.3.40",
+    "@langchain/community": "^0.3.42",
     "@langchain/core": "^0.3.44",
     "@langchain/langgraph": "^0.2.64",
     "@langchain/openai": "^0.5.5",
     "@modelcontextprotocol/sdk": "^1.9.0",
+    "csv-parse": "^5.6.0",
     "d3-dsv": "^2.0.0",
     "dotenv": "^16.4.7",
+    "file-type": "^20.5.0",
+    "fs": "^0.0.1-security",
+    "mime-types": "^3.0.1",
+    "pdf-parse": "^1.1.1",
+    "pdf-table-extractor": "^1.0.3",
+    "pdfjs-dist": "^5.2.133",
     "pg": "^8.14.1",
     "uuid": "^11.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/pg": "^8.11.12"
   }
 }
