--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "@langchain/langgraph": "^0.2.64",
     "@langchain/openai": "^0.5.5",
     "@modelcontextprotocol/sdk": "^1.9.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "d3-dsv": "^2.0.0",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "file-type": "^20.5.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "pdf-parse": "^1.1.1",
     "pdf-table-extractor": "^1.0.3",
     "pdfjs-dist": "^5.2.133",
     "pg": "^8.14.1",
+    "sequelize": "^6.37.7",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.24.2"
