--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "@langchain/community": "^0.3.42",
     "@langchain/core": "^0.3.44",
     "@langchain/langgraph": "^0.2.64",
-    "@langchain/openai": "^0.5.5",
+    "@langchain/openai": "^0.5.10",
     "@modelcontextprotocol/sdk": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "d3-dsv": "^2.0.0",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "file-type": "^20.5.0",
     "fs": "^0.0.1-security",
